--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
             <li><a href="#">Projects</a></li>
-            <li><a href="#">Contacts</a></li>
           </ul>
         </nav>
       </section>
@@ -29,6 +29,7 @@
         <h1>Your Favorite CSS Attributes Together</h1>
       </div>
     </section>
+    <img src="img/banner-img01.jpg">
 
 
   </body>
